--- a/src-frontend/app/decideur/autorisation-chart/autorisations-view/autorisations-view.component.html
+++ b/src-frontend/app/decideur/autorisation-chart/autorisations-view/autorisations-view.component.html
@@ -18,5 +18,11 @@
                 <app-autorisation-equipement></app-autorisation-equipement>
             </div>
         </div>
+        <br><hr>
+        <div class="d-flex justify-content-center">
+            <div class="col-lg-8 col-md-4">
+                <app-autorisation-pie-chart></app-autorisation-pie-chart>
+            </div>
+        </div>
     </div>
 </div>
