--- a/src-frontend/app/demandeur/demande/demande-summary/demande-summary.component.html
+++ b/src-frontend/app/demandeur/demande/demande-summary/demande-summary.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid" style="width: 90%;">
     
     <!-- <h1>{{demande.description}}</h1> -->
     <div class="card">
