--- a/src-frontend/app/gestionnaires/autorisations/autorisations.component.html
+++ b/src-frontend/app/gestionnaires/autorisations/autorisations.component.html
@@ -3,10 +3,11 @@
     <head>
     </head>
     <body>
+      <div class="container-fluid" style="width: 90%;">
         <table class="table">
             <thead class="thead-light">
               <tr>
-                <th scope="col">Identifiant</th>
+                <th scope="col" class="id">#Id</th>
                 <th scope="col">Date de début de réservation</th>
                 <th scope="col">Date de fin de réservation</th>
                 <th scope="col">equipement</th>
@@ -30,6 +31,7 @@
               </tr>
             </tbody>
           </table>
+      </div>
 
 
     </body>
