--- a/src-frontend/app/decideur/autorisation-chart/autorisation-gestionnaire/autorisation-gestionnaire.component.html
+++ b/src-frontend/app/decideur/autorisation-chart/autorisation-gestionnaire/autorisation-gestionnaire.component.html
@@ -19,6 +19,7 @@
     [options]="barChartOptions"
     [plugins]="barChartPlugins"
     [legend]="barChartLegend"
-    [chartType]="barChartType">
+    [chartType]="barChartType"
+    [colors]="barCharColor">
   </canvas>
 </div>
