--- a/src-frontend/app/gestionnaires/demandeurs/demandeurs.component.html
+++ b/src-frontend/app/gestionnaires/demandeurs/demandeurs.component.html
@@ -3,10 +3,15 @@
     <head>
     </head>
     <body>
+      <div class="container-fluid" style="width: 90%;">
+      <div class="form-group">
+        <input type="text" class="form-control" placeholder="rechercher par état" style="width: 300px;" [(ngModel)]="searchSubject">
+        {{searchSubject}}
+      </div>
         <table class="table table-striped">
             <thead class="thead-light">
               <tr>
-                <th scope="col">Identifiant</th>
+                <th scope="col" class="id">#Id</th>
                 <th scope="col">Username</th>
                 <th scope="col">Nom</th>
                 <th scope="col">Prénom</th>
@@ -15,7 +20,7 @@
               </tr>
             </thead>
             <tbody>
-              <tr *ngFor="let demandeur of demandeurs ">
+              <tr *ngFor="let demandeur of demandeurs | SearchEtatFilter:searchSubject ">
                 <th scope="row">{{demandeur.id}} </th>
                 <td>{{demandeur.username}}</td>
                 <td>{{demandeur.nom}}</td>
@@ -30,6 +35,7 @@
               </tr>
             </tbody>
           </table>
+      </div>
 
 
     </body>
