--- a/src-frontend/app/gestionnaires/demandeurs/list-demandes/demande-view/demande-view.component.html
+++ b/src-frontend/app/gestionnaires/demandeurs/list-demandes/demande-view/demande-view.component.html
@@ -10,8 +10,12 @@
             <td>{{formatDate(reservation.demande.dateDemande)}}</td>
           </tr>
           <tr>
-            <th scope="row">la date de réservation :</th>
-            <td>{{formatDate(reservation.demande.dateReservation)}}</td>
+            <th scope="row">la date de debut de réservation :</th>
+            <td>{{formatDate(reservation.demande.dateDebutReservation)}}</td>
+          </tr>
+          <tr>
+            <th scope="row">la date de fin de réservation :</th>
+            <td>{{formatDate(reservation.demande.dateFinReservation)}}</td>
           </tr>
           <tr>
             <th scope="row">L'équipement désiré :</th>
