--- a/src-frontend/app/gestionnaires/reservations/reservations.component.html
+++ b/src-frontend/app/gestionnaires/reservations/reservations.component.html
@@ -29,6 +29,7 @@
         <option value="validée" selected>Validée</option>
         <option value="rejetée" >Rejetée</option>
         <option value="en cours de traitement" >En cours de traitement </option>
+        <option value="initial" >Initial</option>
       </select>
     </div>
     <div class="form-group col">
