--- a/src-frontend/app/home/home.component.html
+++ b/src-frontend/app/home/home.component.html
@@ -10,7 +10,7 @@
   <div class="container section-container">
       <div class="row align-items-center justify-content-center">
           <div class="col">
-              <h3>title</h3>
+              <h3>La ville d'Agadir</h3>
               <hr>
           </div>
       </div>
@@ -21,11 +21,16 @@
           <div class="col-4 h-100">
               <div class="featured-text-right text-center text-lg-left  h-100">
                   <h4>Info</h4>
-                  <p class="text-black-50">
-                      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
-                      Aenean commodo ligula eget dolor. Aenean massa.
-                      Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. 
-                      Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. 
+                  <p class="text-black-100">
+                    La ville d'Agadir au Maroc, bordée de plages paradisiaques, 
+                    est beauté de lumière face à l'océan atlantique. 
+                    Ici, la douceur est celle des plages de sable fin et des caresses du soleil. 
+                    A 3h de vol de Paris ainsi que d'autres villes européennes, 
+                    Agadir est une station balnéaire de charme qui attire nombreux touristes nationaux et internationaux.
+
+                    Il y a mille et une façons de visiter et vivre Agadir. 
+                    
+                    C'est d'abord l'évasion, et évidemment l'une des plus belles plages au Maroc, le farniente, dans un site touristique magnifique et sous un climat idyllique propice à vous faire oublier tous vos soucis. C'est aussi l'occasion de concilier tourisme et bien-être: sports, remise en forme dans l'un des centres de thalassothérapie dans la côte atlantique ... Un séjour à Agadir à l'issue duquel vous reviendrez reposé et régénéré. 
                   </p>
               </div>
           </div>
@@ -37,7 +42,7 @@
   <div class="container">
       <div class="row align-items-center">
           <div class="col">
-              <h3>title</h3>
+              <h3>Capitale de la region</h3>
               <hr>
           </div>
       </div>
@@ -47,10 +52,18 @@
               <div class="featured-text-left text-center text-lg-left  h-100">
                   <h4>Info</h4>
                   <p class="text-black-50">
-                      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
-                      Aenean commodo ligula eget dolor. Aenean massa.
-                      Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. 
-                      Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. </p>
+                    Capitale de la région Souss Massa , Agadir est également une ville débordant d'une riche activité économique et culturelle. 
+                    Son littoral s'étend vers le sud jusqu'aux provinces sahariennes. Son arrière-pays pénètre jusqu'aux montagnes de l'Anti-Atlas. 
+                    Aujourd'hui, le port d'Agadir est le plus important port de pêche du Maroc. La nouvelle ville d'Agadir alliant modernité et simplicité : 
+                    de grand espaces verts, de grandess avenues, des jardins fleuris, une architecture contemporaine élégante.
+
+                    Les découvertes et révélations que vous apporteront les excursions dans la région d'Agadir, 
+                    ainsi que l'exploration de la nature et la de la culture berbère sont époustouflantes: paysages spectaculaires, 
+                    flore, faune, modes de vie, architecture, artisanat, rencontre... Votre évasion voyage vous enrichira en émotions, 
+                    connaissances et souvenirs. 
+                    
+                    Quelle que soit la façon avec laquelle vous choisirez de découvrir et visiter Agadir, 
+                    vous emporterez certainement un peu d'Agadir en vous. </p>
               </div>
           </div>
           <div class="col-6 ">
