--- a/src-frontend/app/home/home.component.scss
+++ b/src-frontend/app/home/home.component.scss
@@ -30,7 +30,7 @@ h1,h2,h3,h4{
     padding: 0 0 0 2rem;
     border-left: .5rem solid #D98E04;
     line-height:    140%;
-    width:          70%;
+    width:          120%;
     margin-left:    15%;
     margin-bottom:  30px;
     /* text-indent:    30px; */
@@ -41,8 +41,9 @@ h1,h2,h3,h4{
     padding: 0 0 0 2rem ;
     border-right: .5rem solid #D98E04;
     line-height:    140%;
-    width:          70%;
-    margin-left:    15%;
+    width:          120%;
+    margin-left:    -20%;
+    margin-right: 20%;
     margin-bottom:  30px;
     /* text-indent:    30px; */
     /* background-color: gray; */
