--- a/src-frontend/app/gestionnaires/demandeurs/demandeurs.component.html
+++ b/src-frontend/app/gestionnaires/demandeurs/demandeurs.component.html
@@ -4,9 +4,11 @@
     </head>
     <body>
       <div class="container-fluid" style="width: 90%;">
+      <div class="col-3"></div>
       <div class="form-group">
-        <input type="text" class="form-control" placeholder="rechercher par état" style="width: 300px;" [(ngModel)]="searchSubject">
-        {{searchSubject}}
+        <label for="objet">rechercher par Username:</label>
+        <input type="text" class="form-control" style="width: 300px;" [(ngModel)]="searchSubject">
+        
       </div>
         <table class="table table-striped">
             <thead class="thead-light">
@@ -20,7 +22,7 @@
               </tr>
             </thead>
             <tbody>
-              <tr *ngFor="let demandeur of demandeurs | SearchEtatFilter:searchSubject ">
+              <tr *ngFor="let demandeur of demandeurs | SearchUsernameFilter:searchSubject ">
                 <th scope="row">{{demandeur.id}} </th>
                 <td>{{demandeur.username}}</td>
                 <td>{{demandeur.nom}}</td>
