--- a/src-frontend/app/gestionnaires/demandeurs/list-demandes/list-demandes.component.html
+++ b/src-frontend/app/gestionnaires/demandeurs/list-demandes/list-demandes.component.html
@@ -3,6 +3,35 @@
     <head>
     </head>
     <body>
+      <div class="container-fluid" style="width: 90%;">
+        <!-- ******* -->
+        <div class="form-row" >
+          <div class="col-3"></div>
+          <div class="form-group col">
+            <label for="objet">rechercher par Objet :</label>
+            <input type="text" class="form-control" name="objet" id="objet" [(ngModel)]="searchObjetSubject">
+          </div>
+        <div class="form-group col">
+          <label for="etat"> chercher par état :</label>
+          <select name="etat" id="etat" [(ngModel)]="searchEtatSubject"  class="form-control">
+            <option value="">Rien</option>
+            <option value="validée" selected>Validée</option>
+            <option value="rejetée" >Rejetée</option>
+            <option value="en cours de traitement" >En cours de traitement </option>
+            <option value="initial" >initial </option>
+          </select>
+        </div>
+        <div class="form-group col">
+          <label for="equipement"> chercher par équipement</label>
+          <select name="equipement" id="equipement" [(ngModel)]="searchEquipementSubject"  class="form-control">
+            <option value="" selected="selected">tous les équipements</option>
+            <option *ngFor="let e of equipements" [value]="e.nom" > {{e.nom}} </option>
+          </select>
+        </div>
+        <div class="col-3"></div>
+    
+        </div>
+        <!-- ******* -->
         <table class="table table-striped">
             <thead class="thead-light">
               <tr>
@@ -14,7 +43,7 @@
               </tr>
             </thead>
             <tbody>
-              <tr *ngFor="let reservation of reservations ">
+              <tr *ngFor="let reservation of reservations | SearchEtatFilter:searchEtatSubject |SearchObjetFilter:searchObjetSubject | SearchEquipementFilter:searchEquipementSubject">
                 <th scope="row">{{reservation.id}} </th>
                 <td>{{formatDate(reservation.demande.dateDemande)}}</td>
                 <td>{{reservation.equipement.nom}} </td>
@@ -31,7 +60,7 @@
               </tr>
             </tbody>
           </table>
-
+      </div>
 
     </body>
 </html>
