--- a/src-frontend/app/gestionnaires/profile/profile.component.html
+++ b/src-frontend/app/gestionnaires/profile/profile.component.html
@@ -128,7 +128,7 @@
         {{message}}
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal" href="">Close</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal" [routerLink]="['/gestionnaire/profile-view']">Close</button>
       <!--  <button type="button" class="btn btn-primary">Save changes</button>-->
       </div>
     </div>
