--- a/src-frontend/app/list-equipements/equipement-update/equipement-update.component.html
+++ b/src-frontend/app/list-equipements/equipement-update/equipement-update.component.html
@@ -57,7 +57,7 @@
             </li>
         </ul>    
         <div  style="margin: 6px; float: right;">
-            <button type="submit" class="btn btn-success">Save</button>
+            <button type="submit" class="btn btn-success"  data-toggle="modal" href="#exampleModal">Save</button>
             <button type="button" class="btn btn-primary" [routerLink]="['/equipements']">Annuler</button>
         </div>
         </form>
@@ -67,6 +67,26 @@
         </div>
         <div class="card-footer">
         </div>
+            <!-- Modal -->
+<div class="modal " id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">demande</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          {{message}}
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal" [routerLink]="['/equipements']">Close</button>
+        <!--  <button type="button" class="btn btn-primary">Save changes</button>-->
+        </div>
+      </div>
+    </div>
+  </div>
     </div>      
 </div>
 <!-- public id: Number,
